ubiquity (2.1.8) UNRELEASED; urgency=low

  * On the timezone page, replace the GTK Comboboxes with ComboboxEntrys and
    add support for typeahead by country/region and city.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 06 Jan 2010 18:08:47 +0000

ubiquity (2.1.7) lucid; urgency=low

  [ Mario Limonciello ]
  * Mythbuntu: Reconfigure mythbuntu-default-settings to ensure that the
    DefaultSession is set.
  * Only run hal-lock if hald is actually running due to changes in
    hal 0.5.14-0ubuntu2.
  * Widget names are no longer stored in the widget's internal name, but
    rather in the object data.  Sync this information back to the widget's
    internal name. (LP: #503710)
  * Automatic update of included source packages: grub-installer
    1.49ubuntu1.

  [ Evan Dandrea ]
  * Copy any network configuration set up by the user of the live CD to
    the installed system.

 -- Mario Limonciello <superm1@ubuntu.com>  Wed, 06 Jan 2010 03:37:13 -0600

ubiquity (2.1.6) lucid; urgency=low

  [ Colin Watson ]
  * Tell partman not to recalculate choices for choose_partition or
    active_partition while we're going back and forward building the cache.
    Requires partman-base 135ubuntu3.

  [ Mario Limonciello ]
  * debian/control: Drop Recommends on gnome-system-tools.  Code that was
    using time-admin was removed back in ubiquity 1.3.7.
  * Automatic update of included source packages: console-setup
    1.34ubuntu6, partman-base 135ubuntu3.

 -- Mario Limonciello <superm1@ubuntu.com>  Thu, 31 Dec 2009 01:21:41 -0600

ubiquity (2.1.5) lucid; urgency=low

  [ Mario Limonciello ]
  * Mythbuntu: Don't start MySQL using the upstart scripts since they don't
    work in a chroot. (LP: #494830)

  [ Colin Watson ]
  * Update two more edit_partition calls to account for renamed format ->
    fmt argument (LP: #494608).
  * Remove hack forcing the use of sudo with the KDE frontend, as it no
    longer appears to be necessary and things break if we don't use kdesudo