@@ -1,7 +1,12 @@
 ubiquity (2.1.8) UNRELEASED; urgency=low
 
+  [ Evan Dandrea ]
   * On the timezone page, replace the GTK Comboboxes with ComboboxEntrys and
     add support for typeahead by country/region and city.
+
+  [ Colin Watson ]
+  * Cope with frozen choices when preseeding partman to select a particular
+    script (LP: #505197).
 
  -- Evan Dandrea <evand@ubuntu.com>  Wed, 06 Jan 2010 18:08:47 +0000
 
